# linfa

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTION.md  Cargo.toml  LICENSE-MIT  README.md  adaboost_example.tex  build.rs  decision_tree_example.tex  index.html  robots.txt  search_index.en.js  sitemap.xml  style.css
algorithms/linfa-bayes/: Cargo.toml  README.md
algorithms/linfa-bayes/examples/: winequality.rs  winequality_bayes.rs  winequality_bernouilli.rs  winequality_multinomial.rs
algorithms/linfa-bayes/src/: base_nb.rs  bernoulli_nb.rs  error.rs  gaussian_nb.rs  hyperparams.rs  lib.rs  multinomial_nb.rs
algorithms/linfa-clustering/: Cargo.toml  README.md
algorithms/linfa-clustering/benches/: appx_dbscan.rs  dbscan.rs  gaussian_mixture.rs  k_means.rs
algorithms/linfa-clustering/examples/: appx_dbscan.rs  dbscan.rs  kmeans.rs  optics.rs  optics_plot.py
algorithms/linfa-clustering/src/: lib.rs  utils.rs
algorithms/linfa-clustering/tests/: hyperparameters_test.rs
algorithms/linfa-elasticnet/: Cargo.toml  README.md
algorithms/linfa-elasticnet/examples/: elasticnet.rs  elasticnet_cv.rs  multitask_elasticnet.rs
algorithms/linfa-elasticnet/src/: algorithm.rs  error.rs  hyperparameters.rs  hyperparams.rs  lib.rs
algorithms/linfa-ensemble/: Cargo.toml  README.md  pyproject.toml
algorithms/linfa-ensemble/examples/: adaboost.rs  adaboost_iris.rs  adaboost_regressor.rs  bagging_iris.rs  ensemble_iris.rs  gradient_boost_regressor.rs  random_forest.rs  random_forest_regressor.rs  randomforest_iris.rs
algorithms/linfa-ensemble/src/: adaboost.rs  adaboost_hyperparams.rs  algorithm.rs  ensemble.rs  hyperparams.rs  lib.rs
algorithms/linfa-ftrl/: Cargo.toml  README.md
algorithms/linfa-ftrl/benches/: ftrl.rs
algorithms/linfa-ftrl/examples/: winequality.rs  winequality_ftrl.rs
algorithms/linfa-ftrl/src/: algorithm.rs  error.rs  hyperparams.rs  lib.rs
algorithms/linfa-hierarchical/: Cargo.toml  README.md
algorithms/linfa-hierarchical/examples/: irisflower.rs
algorithms/linfa-hierarchical/src/: error.rs  lib.rs
algorithms/linfa-ica/: Cargo.toml  README.md
algorithms/linfa-ica/benches/: fast_ica.rs
algorithms/linfa-ica/examples/: fast_ica.rs
algorithms/linfa-ica/src/: error.rs  fast_ica.rs  hyperparams.rs  lib.rs
algorithms/linfa-kernel/: Cargo.toml  README.md
algorithms/linfa-kernel/src/: inner.rs  lib.rs  sparse.rs
algorithms/linfa-linear/: Cargo.toml  README.md
algorithms/linfa-linear/benches/: ols_bench.rs
algorithms/linfa-linear/examples/: diabetes.rs  glm.rs
algorithms/linfa-linear/src/: error.rs  float.rs  glm.rs  isotonic.rs  lib.rs  ols.rs
datasets/: Cargo.toml  README.md
datasets/src/: dataset.rs  generate.rs  lib.rs
linfa-bayes/: Cargo.toml
linfa-bayes/examples/: winequality.rs
linfa-bayes/src/: error.rs  gaussian_nb.rs  lib.rs
linfa-clustering/: Cargo.toml  README.md
linfa-clustering/benches/: appx_dbscan.rs  dbscan.rs  gaussian_mixture.rs  k_means.rs
linfa-clustering/examples/: appx_dbscan.rs  dbscan.rs  kmeans.rs  main.rs
linfa-clustering/src/: lib.rs  utils.rs
linfa-clustering/src/appx_dbscan/: algorithm.rs  hyperparameters.rs  tests.rs
linfa-clustering/src/dbscan/: algorithm.rs  hyperparameters.rs
linfa-clustering/src/gaussian_mixture/: algorithm.rs  errors.rs  hyperparameters.rs
linfa-clustering/src/k_means/: algorithm.rs  helpers.rs  hyperparameters.rs  mod.rs
linfa-clustering/src/spectral/: algorithms.rs  hyperparameters.rs  lobpcg.rs  mod.rs
linfa-clustering/src/svm/: mod.rs  solver.rs
linfa-clustering/tests/: hyperparameters_test.rs
linfa-elastic/: Cargo.toml
linfa-elastic/src/: lib.rs
linfa-elasticnet/: Cargo.toml  README.md
linfa-elasticnet/examples/: elasticnet.rs
linfa-elasticnet/src/: algorithm.rs  error.rs  hyperparameters.rs  lib.rs
linfa-ensemble/: Cargo.toml  README.md
linfa-ensemble/benches/: random_forest.rs
linfa-ensemble/examples/: random_forest.rs
linfa-ensemble/src/: lib.rs
linfa-ensemble/src/random_forest/: algorithm.rs  hyperparameters.rs  mod.rs
linfa-ensemble/src/voting_classifier/: README.md  (+3 more)
linfa-hierachical/: Cargo.toml
linfa-hierachical/src/: lib.rs
linfa-hierarchical/: Cargo.toml  README.md
linfa-hierarchical/examples/: irisflower.rs
linfa-hierarchical/src/: lib.rs
linfa-ica/: Cargo.toml  README.md
linfa-ica/examples/: README.md  fast_ica.rs
linfa-ica/src/: fast_ica.rs  lib.rs
linfa-k-means/: Cargo.toml  README.md
linfa-k-means/benches/: k_means.rs
linfa-k-means/examples/: main.rs
linfa-k-means/src/: lib.rs  utils.rs
linfa-kernel/: Cargo.toml  README.md
linfa-kernel/src/: inner.rs  lib.rs  sparse.rs
linfa-linear/: Cargo.toml  README.md
linfa-linear/examples/: diabetes.rs  glm.rs
linfa-linear/src/: elastic.rs  error.rs  float.rs  glm.rs  lib.rs  ols.rs
linfa-logistic/: Cargo.toml  README.md
linfa-logistic/examples/: winequality.rs
linfa-logistic/src/: argmin_helper.rs  argmin_param.rs  float.rs  lib.rs
linfa-reduction/: Cargo.toml  README.md
linfa-reduction/examples/: diffusion_map.rs  fast_ica.rs  pca.rs  spectral.rs
linfa-reduction/src/: error.rs  lib.rs  pca.rs  utils.rs
linfa-supervised/: Cargo.toml
linfa-supervised/examples/: main.rs
linfa-supervised/src/: lib.rs  utils.rs
linfa-svm/: Cargo.toml  README.md
linfa-svm/examples/: winequality.rs
linfa-svm/src/: classification.rs  hyperparameters.rs  lib.rs  permutable_kernel.rs  regression.rs  solver_smo.rs
linfa-trees/: Cargo.toml  README.md
linfa-trees/benches/: decision_tree.rs
linfa-trees/examples/: decision_tree.rs
linfa-trees/src/: lib.rs
python-bindings/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  setup.py
python-bindings/.cargo/: config
python-bindings/linfa_k_means/: LinfaKMeans.py  __init__.py
python-bindings/src/: lib.rs
python-bindings/tests/: test_k_means.py
tonic-linfa-k-means/: .gitignore  Cargo.toml  README.md  build.rs
tonic-linfa-k-means/proto/: centroids.proto
tonic-linfa-k-means/src/: lib.rs  main.rs  server.rs
tonic-linfa-k-means/test/: centroids.json
(+1986 files in other folders)
