[package]
name = "linfa"
version = "0.5.0"
authors = [
    "Luca Palmieri <rust@lpalmieri.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>",
    "Paul Körbitz <koerbitz@google.com>"
]
description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml"]
categories = ["algorithms", "mathematics", "science"]

exclude = [".github/"]

[features]
default = []

netlib-static = ["blas", "ndarray-linalg", "netlib-src/static"]
netlib-system = ["blas", "ndarray-linalg", "netlib-src/system"]

openblas-static = ["blas", "ndarray-linalg", "openblas-src/static"]
openblas-system = ["blas", "ndarray-linalg", "openblas-src/system"]

intel-mkl-static = ["blas", "ndarray-linalg", "intel-mkl-src/mkl-static-lp64-seq", "intel-mkl-src/download", "anyhow"]
intel-mkl-system = ["blas", "ndarray-linalg", "intel-mkl-src/mkl-dynamic-lp64-seq", "anyhow"]

blas = ["ndarray/blas"]

serde = ["serde_crate", "ndarray/serde"]

[dependencies]
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
approx = "0.4"
pdqselect = "=0.1.0"

ndarray = { version = "0.15", default-features = false, features = ["approx"] }
ndarray-linalg = { version = "0.14", optional = true }

thiserror = "1.0"
# Temporary fix for compatibility issue between intel-mkl-tool and anyhow (https://github.com/rust-math/intel-mkl-src/issues/68)
anyhow = { version = "<=1.0.48", optional = true }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies.intel-mkl-src]
version = "0.6.0"
default-features = false
optional = true

[dependencies.netlib-src]
version = "0.8.0"
optional = true
features = ["cblas"]
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]

[dev-dependencies]
ndarray-rand = "0.14"
linfa-datasets = { path = "datasets", features = ["winequality", "iris", "diabetes"] }

[workspace]
members = [
    "algorithms/*",
    "datasets",
]

[profile.release]
opt-level = 3
