[package]
name = "linfa"
version = "0.5.0"
authors = [
    "Luca Palmieri <rust@lpalmieri.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>",
    "Paul Körbitz <koerbitz@google.com>"
]
description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml"]
categories = ["algorithms", "mathematics", "science"]

exclude = [".github/"]

[features]
default = []

netlib-static = ["blas", "ndarray-linalg/netlib-static"]
netlib-system = ["blas", "ndarray-linalg/netlib-system"]

openblas-static = ["blas", "ndarray-linalg/openblas-static"]
openblas-system = ["blas", "ndarray-linalg/openblas-system"]

intel-mkl-static = ["blas", "ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["blas", "ndarray-linalg/intel-mkl-system"]

blas = ["ndarray/blas"]

serde = ["serde_crate", "ndarray/serde"]

[dependencies]
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
approx = "0.4"

ndarray = { version = "0.15", features = ["approx"] }
ndarray-linalg = { version = "0.14", optional = true }

thiserror = "1.0"
# Temporary fix for compatibility issue between intel-mkl-tool and anyhow (https://github.com/rust-math/intel-mkl-src/issues/68)
anyhow = { version = "<=1.0.48" }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
ndarray-rand = "0.14"
linfa-datasets = { path = "datasets", features = ["winequality", "iris", "diabetes"] }

[workspace]
members = [
    "algorithms/*",
    "datasets",
]

[profile.release]
opt-level = 3
