[package]
name = "linfa"
version = "0.7.1"
authors = [
    "Luca Palmieri <rust@lpalmieri.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>",
    "Paul Körbitz <koerbitz@google.com>",
    "Yuhan Lin <yuhanliin@protonmail.com>",
]
description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml"]
categories = ["algorithms", "mathematics", "science"]

exclude = [".github/"]

[features]
default = []
benchmarks = ["criterion", "pprof"]
netlib-static = ["blas", "ndarray-linalg/netlib-static"]
netlib-system = ["blas", "ndarray-linalg/netlib-system"]

openblas-static = ["blas", "ndarray-linalg/openblas-static"]
openblas-system = ["blas", "ndarray-linalg/openblas-system"]

intel-mkl-static = ["blas", "ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["blas", "ndarray-linalg/intel-mkl-system"]

blas = ["ndarray/blas"]

serde = ["serde_crate", "ndarray/serde"]

[dependencies]
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
approx = "0.5"

ndarray = { version = "0.16", features = ["approx"] }
ndarray-linalg = { version = "0.17", optional = true }
sprs = { version = "0.11", default-features = false }

thiserror = "2.0"

criterion = { version = "0.7", optional = true }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
ndarray-rand = "0.15"
linfa-datasets = { path = "datasets", features = [
    "winequality",
    "iris",
    "diabetes",
    "generate",
] }
statrs = "0.18"

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.14", features = [
    "flamegraph",
    "criterion",
], optional = true }

[workspace]
members = ["algorithms/*", "datasets"]

[profile.release]
opt-level = 3
