[package]
name = "linfa-datasets"
version = "0.7.1"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Collection of small datasets for Linfa"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-ml/linfa"

[dependencies]
linfa = { version = "0.7.1", path = ".." }
ndarray = { version = "0.16" }
ndarray-csv = "=0.5.1"
csv = "1.1"
flate2 = "1.0"
ndarray-rand = { version = "0.14", optional = true }

[dev-dependencies]
approx = "0.4"
statrs = "0.16.0"

[features]
default = []
diabetes = []
iris = []
winequality = []
linnerud = []
generate = ["ndarray-rand"]
