[package]
name = "linfa-bayes"
version = "0.1.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "Collection of Naive Bayes Algorithms"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-ml/linfa"
readme = "README.md"
keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13" , features = ["blas", "approx"]}
ndarray-stats = "0.3"
linfa = { version = "0.2.1", path = ".." }

[dev-dependencies]
approx = "0.3"
linfa = { path = ".." }
linfa-datasets = { version = "0.2.0", path = "../datasets", features = ["winequality"] }
