[package]
name = "linfa-clustering"
version = "0.1.0"
edition = "2018"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
description = "A collection of clustering algorithms"
license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/linfa"
readme = "README.md"

keywords = ["clustering", "machine learning", "unsupervised learning", "linfa", "k-means"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon", "serde", "approx"]}
ndarray-rand = "0.11"
ndarray-stats = "0.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }
criterion = "0.2"
serde_json = "1"
approx = "*"

[[bench]]
name = "k_means"
harness = false
