[package]
name = "linfa-clustering"
version = "0.1.0"
edition = "2018"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
description = "A collection of clustering algorithms"
license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/linfa"
readme = "README.md"

keywords = ["clustering", "machine-learning", "linfa", "k-means", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon", "serde", "approx"]}
ndarray-rand = "0.11"
ndarray-stats = "0.3"
#ndarray-linalg = { version = "0.12", features = ["openblas"] }
ndarray-linalg = { path = "../../ndarray-linalg", features = ["openblas"] }
sprs = "0.7"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }
criterion = "0.3"
serde_json = "1"
approx = "0.3"

[[bench]]
name = "k_means"
harness = false

[[bench]]
name = "dbscan"
harness = false
