[package]
name = "linfa-clustering"
version = "0.1.0"
edition = "2018"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
description = "A collection of clustering algorithms"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa/"
readme = "README.md"

keywords = ["clustering", "machine-learning", "linfa", "k-means", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = ["tests-openblas-system"]
tests-openblas-system = ["openblas-src/system"]
tests-openblas-build = ["openblas-src/cblas", "openblas-src/lapacke"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.13", features = ["rayon", "approx"]}
ndarray-linalg = "0.12"
ndarray-rand = "0.11"
ndarray-stats = "0.3"
sprs = "0.7"
num-traits = "0.1.32"
rand_isaac = "0.2.0"

linfa = { path = ".." }

[dev-dependencies]
openblas-src = { version = "0.9", default-features = false }
ndarray-npy = { version = "0.5", default-features = false }
criterion = "0.3"
serde_json = "1"
approx = "0.3"

[[bench]]
name = "k_means"
harness = false

[[bench]]
name = "dbscan"
harness = false
