[package]
name = "linfa-elastic"
version = "0.1.0"
authors = ["Google / Paul Koerbitz <koerbitz@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.13", features = ["approx"]}

[dev-dependencies]
approx = "0.3"