[package]
name = "linfa-ensemble"
version = "0.1.0"
edition = "2018"
authors = ["Francesco Gadaleta <francesco@amethix.com>"]
description = "A collection of ensemble methods based on decision trees"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ensemble", "random-forest", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon", "approx"]}
ndarray-rand = "0.11"
linfa-trees = {path = "../linfa-trees", version = "0.1"}

[dev-dependencies]
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }
criterion = "0.3"
serde_json = "1"
approx = "0.3"

[[bench]]
name = "random_forest"
harness = false
