[package]
name = "linfa-hierachical"
version = "0.1.0"
authors = ["Lorenz Schmidt <lorenz.schmidt@mailbox.org>"]
edition = "2018"

description = "Support Vector Machines"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["hierachical", "agglomerative", "clustering", "cluster", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
openblas = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
netlib = ["ndarray-linalg/netlib"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon", "serde", "approx"]}
ndarray-linalg = { version = "0.12" }
kodama = "0.2"

linfa-kernel = { path = "../linfa-kernel" }

[dev-dependencies]
ndarray-rand = "0.11"
#linfa-kernel = { path = "../linfa-kernel", features = ["openblas"] }
openblas-src = "0.7"
