[package]
name = "linfa-ica"
version = "0.1.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "A collection of Independent Component Analysis (ICA) algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
openblas = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
netlib = ["ndarray-linalg/netlib"]

[dependencies]
ndarray = { version = "0.13" }
ndarray-rand = "0.11"
ndarray-stats = "0.3"
ndarray-linalg = { version = "0.12", default-features = false}
num-traits = "0.1.32"
rand_isaac = "0.2.0"

linfa = { path = ".." }

[dev-dependencies]
ndarray-npy = { version = "0.5", default-features = false }
paste = "1.0"
