[package]
name = "linfa-ica"
version = "0.2.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "A collection of Independent Component Analysis (ICA) algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = ["tests-openblas-system"]
tests-openblas-system = ["openblas-src/system"]
tests-openblas-build = ["openblas-src/cblas", "openblas-src/lapacke"]

[dependencies]
ndarray = { version = "0.13", default-features = false }
ndarray-rand = "0.11"
ndarray-stats = "0.3"
ndarray-linalg = "0.12"
num-traits = "0.1.32"
rand_isaac = "0.2.0"

linfa = { path = ".." }

[dev-dependencies]
openblas-src = { version = "0.9", default-features = false }
ndarray-npy = { version = "0.5", default-features = false }
paste = "1.0"
