[package]
name = "linfa-ica"
version = "0.2.1"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "A collection of Independent Component Analysis (ICA) algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]                                                     
[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.13", default-features = false }
ndarray-rand = "0.11"
ndarray-stats = "0.3"
ndarray-linalg = "0.12"
num-traits = "0.2"
rand_isaac = "0.2.0"

linfa = { version = "0.2.1", path = ".." }

[dev-dependencies]
openblas-src = { version = "0.9", default-features = false, features = ["system"] }
ndarray-npy = { version = "0.5", default-features = false }
paste = "1.0"
