[package]
name = "linfa-k-means"
version = "0.1.0"
edition = "2018"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
description = "An implementation of K-Means clustering"
license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/linfa"
readme = "README.md"

keywords = ["clustering", "machine learning", "unsupervised learning", "linfa"]

[dependencies]
ndarray = { version = "0.13" }
ndarray-rand = "0.11"
ndarray-stats = "0.3"

[dev-dependencies]
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }
criterion = "0.2"

[[bench]]
name = "k_means"
harness = false
