[package]
name = "linfa-kernel"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Kernel methods for non-linear algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa/"
readme = "README.md"

keywords = ["kernel", "machine-learning", "linfa"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13", default-features = false, features = ["blas"] }
ndarray-linalg = { version = "0.12", default-features = false }

sprs = { git = "https://github.com/vbarrielle/sprs/", default-features = false, features = [] }
hnsw = "0.6"
space = "0.10"

[dev-dependencies]

[features]
openblas = ["ndarray-linalg/openblas"]
netlib = ["ndarray-linalg/netlib"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
