[package]
name = "linfa-kernel"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Kernel methods for non-linear algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa/"
readme = "README.md"

keywords = ["kernel", "machine-learning", "linfa"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
openblas = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
netlib = ["ndarray-linalg/netlib"]

[dependencies]
ndarray = { version = "0.13" }
ndarray-linalg = { version = "0.12" }

#sprs = { git = "https://github.com/vbarrielle/sprs/", default-features = false, features = [] }
sprs = "0.7"
hnsw = "0.6"
space = "0.10"

linfa = { path = ".." }

[dev-dependencies]
