[package]
name = "linfa-kernel"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Kernel methods for non-linear algorithms"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa/"
readme = "README.md"

keywords = ["kernel", "machine-learning", "linfa"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = "0.13"
sprs = { version = "0.9", default-features = false }
hnsw = "0.6"
space = "0.10"

linfa = { path = ".." }
