[package]
name = "linfa-linear"
version = "0.2.0"
authors = ["Paul Körbitz / Google <koerbitz@google.com>"]
edition = "2018"
workspace = ".."

[dependencies]
ndarray = {version = "0.13", features = ["blas", "approx"]}
ndarray-linalg = "0.12"
ndarray-stats = "0.3"
num-traits = "0.2"
argmin = {version="0.3.1", features=["ndarrayl"]}
serde = "1.0"

[dev-dependencies]
openblas-src = { version = "0.9", default-features = false, features = ["system"] }
csv = "1.1"
ndarray-csv = "0.4"
approx = "0.3.2"
flate2 = "1.0"
