[package]
name = "linfa-logistic"
version = "0.1.0"
authors = ["Paul Körbitz / Google <koerbitz@google.com>"]
edition = "2018"
workspace = ".."

[features]
default = ["tests-openblas-system"]
tests-openblas-system = ["openblas-src/system"]
tests-openblas-build = ["openblas-src/cblas", "openblas-src/lapacke"]

[dependencies]
ndarray = {version = "0.13", features = ["blas", "approx"]}
ndarray-linalg = "0.12"
num-traits = "0.2"
argmin = {version="0.3.1", features=["ndarrayl"]}
serde = "1.0"

[dev-dependencies]
openblas-src = { version = "0.9", default-features = false }
approx = "0.3.2"
