[package]
name = "linfa-reduction"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "A collection of dimensionality reduction techniques"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["dimensionality reduction", "machine-learning", "linfa", "spectral", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
openblas = ["ndarray-linalg/openblas", "linfa-kernel/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl", "linfa-kernel/intel-mkl"]
netlib = ["ndarray-linalg/netlib", "linfa-kernel/netlib"]

[dependencies]
ndarray = { version = "0.13" }
ndarray-rand = "0.11"
ndarray-stats = "0.3"
ndarray-linalg = { version = "0.12" }
num-traits = "0.1.32"

linfa-kernel = { path = "../linfa-kernel" }
linfa = { path = ".." }

[dev-dependencies]
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }
criterion = "0.3"
approx = "0.3"
linfa-clustering = { path = "../linfa-clustering" }
