[package]
name = "linfa-reduction"
version = "0.2.1"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "A collection of dimensionality reduction techniques"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["reduction", "machine-learning", "linfa", "spectral", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = "0.13"
ndarray-rand = "0.11"
ndarray-stats = "0.3"
ndarray-linalg = "0.12"
num-traits = "0.2"

linfa = { version = "0.2.1", path = ".." }
linfa-kernel = { version = "0.2.1", path = "../linfa-kernel" }

[dev-dependencies]
openblas-src = { version = "0.9", default-features=false, features = ["system"] }
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }
