[package]
name = "linfa-supervised"
version = "0.1.0"
authors = ["Khalil HADJI <khalil.hadji@outlook.fr>"]
edition = "2018"
description = "A collection of supervised learning algorithms"
license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/linfa"

keywords = ["supervised", "machine-learning", "linfa", "regression", "linear", "ridge", "lasso"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon"] }
ndarray-linalg = { version = "0.12", features = ["openblas"] }