[package]
name = "linfa-svm"
version = "0.2.0"
edition = "2018"
authors = ["Lorenz Schmidt <lorenz.schmidt@mailbox.org>"]
description = "Support Vector Machines"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["svm", "support vector machine", "machine-learning", "linfa", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13", default-features=false, features=["blas"] }
ndarray-rand = "0.11"
num-traits = "0.1.32"

linfa = { path = ".." }
linfa-kernel = { path = "../linfa-kernel" }

[dev-dependencies]
openblas-src = { version = "0.9", default-features = false, features = ["system"] }
csv = "1.1"
ndarray-csv = "0.4"
flate2 = "1.0"
