[package]
name = "linfa-svm"
version = "0.3.0"
edition = "2018"
authors = ["Lorenz Schmidt <lorenz.schmidt@mailbox.org>"]
description = "Support Vector Machines"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["svm", "machine-learning", "linfa", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "linfa-kernel/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.13", default-features=false }
ndarray-rand = "0.11"
num-traits = "0.1.32"

linfa = { version = "0.3.0", path = ".." }
linfa-kernel = { version = "0.3.0", path = "../linfa-kernel" }

[dev-dependencies]
linfa-datasets = { version = "0.3.0", path = "../datasets", features = ["winequality", "diabetes"] }
rand_isaac = "0.2"
