[package]
name = "linfa-trees"
version = "0.2.1"
edition = "2018"
authors = ["Moss Ebeling <moss@banay.me>"]
description = "A collection of tree-based algorithms"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "trees", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon", "approx"]}
ndarray-rand = "0.11"

[dev-dependencies]
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }
criterion = "0.3"
serde_json = "1"
approx = "0.3"
#linfa-clustering = { version = "0.2.1", path = "../linfa-clustering" }

[[bench]]
name = "decision_tree"
harness = false
