[package]
name = "linfa-trees"
version = "0.2.1"
edition = "2018"
authors = ["Moss Ebeling <moss@banay.me>"]
description = "A collection of tree-based algorithms"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "trees", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon", "approx"]}
ndarray-rand = "0.11"

linfa = { path = ".." }

[dev-dependencies]
rand_isaac = "0.2.0"
criterion = "0.3"
approx = "0.3"

[[bench]]
name = "decision_tree"
harness = false
