[package]
name = "tonic-linfa-k-means"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
default-run = "main"

[[bin]]
name="main"
path = "src/main.rs"

[[bin]]
name="gencentroidsdata"
path = "src/bin/gencentroidsdata.rs"

[[bin]]
name="gentestdata"
path = "src/bin/gentestdata.rs"

[[bin]]
name="client"
path = "src/bin/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tonic = "0.1.0-alpha.6"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tokio = "=0.2.0-alpha.6"
serde = { version="1", features=["derive"] }
serde_json = "1"
linfa-k-means = { version = "0.1", path = "../linfa-k-means" }
ndarray = { version="0.13", features=["serde"] }
anyhow = "1"
rand = "0.7"
ndarray-rand = "0.11"

[build-dependencies]
tonic-build = "0.1.0-alpha.6"
