[package]
name = "linfa-bayes"
version = "0.6.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "Collection of Naive Bayes Algorithms"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-ml/linfa"
readme = "README.md"
keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.15" , features = ["approx"]}
ndarray-stats = "0.5"
thiserror = "1.0"

linfa = { version = "0.6.0", path = "../.." }

[dev-dependencies]
approx = "0.4"
linfa-datasets = { version = "0.6.0", path = "../../datasets", features = ["winequality"] }
