[package]
name = "linfa-bayes"
version = "0.8.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "Collection of Naive Bayes Algorithms"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-ml/linfa"
readme = "README.md"
keywords = ["factorization", "machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.16", features = ["approx"] }
ndarray-stats = "0.6"
thiserror = "2.0"

linfa = { version = "0.8.1", path = "../.." }

[dev-dependencies]
approx = "0.5"
linfa-datasets = { version = "0.8.0", path = "../../datasets", features = [
    "winequality",
] }
